--- a/package.json
+++ b/package.json
@@ -8,15 +8,39 @@
     "start": "next start",
     "lint": "next lint"
   },
+  "prisma": {
+    "seed": "ts-node -P tsconfig-seed.json -r tsconfig-paths/register --transpileOnly prisma/seed.ts"
+  },
   "dependencies": {
+    "@next/font": "13.3.0",
+    "@prisma/client": "4.6.1",
     "@types/node": "20.1.1",
     "@types/react": "18.2.6",
     "@types/react-dom": "18.2.4",
+    "bcrypt": "5.1.0",
+    "class-variance-authority": "0.4.0",
+    "clsx": "1.2.1",
+    "cookie": "0.5.0",
+    "css-reset-and-normalize": "2.3.6",
     "eslint": "8.40.0",
     "eslint-config-next": "13.4.1",
+    "jose": "4.11.1",
     "next": "13.4.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-feather": "2.0.10",
+    "react-modal": "^3.16.1",
     "typescript": "5.0.4"
+  },
+  "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
+    "@types/cookie": "^0.5.1",
+    "@types/react-modal": "^3.16.0",
+    "autoprefixer": "^10.4.14",
+    "postcss": "^8.4.24",
+    "prisma": "^4.14.0",
+    "tailwindcss": "^3.3.2",
+    "ts-node": "10.9.1",
+    "tsconfig-paths": "4.1.1"
   }
 }
